--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,20 @@
 {
   "extends": ["airbnb", "prettier", "plugin:node/recommended"],
   "plugins": ["prettier"],
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "rules": {
-    "prettier/prettier": "error",
+    // "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+
+    "no-const-assign": "error",
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
