working on role schema

--- a/config.env
+++ b/config.env
@@ -4,3 +4,6 @@ USER_NAME=pranto
 DATABASE_URL=mongodb+srv://pranto:<PASSWORD>@cluster0.aminlmm.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=eNPlbb9cRkw5NrHk
+
+JWT_SECRET=thesecretcharacter!@#$%ksaklfj-kjsajf
+JWT_EXPIRES_IN=90d
