--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^7.0.0",
     "helmet-csp": "^3.4.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongoose": "^7.5.3",
