--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -34,9 +35,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "stripe": "^14.1.0",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
